Fixed a retarded CSR in-custom-games bug.

--- a/app/views/halo4/match_history/_campaign_history.html.haml
+++ b/app/views/halo4/match_history/_campaign_history.html.haml
@@ -23,7 +23,7 @@
           - break
         %tr
           %td
-            %a{ :href => "/halo4/servicerecord/#{@service_record['Gamertag']}/match/#{match['Id']}" }
+            %a{ :href => "/halo4/servicerecord/#{@service_record['Gamertag']}/match/#{match['Id']}/" }
               #{match['MapName']}
           %td
             #{difficulty_from_id(match['Difficulty'])['Name']}
