--- a/app/views/halo4/match_history/_war_games_customs_history.html.haml
+++ b/app/views/halo4/match_history/_war_games_customs_history.html.haml
@@ -27,7 +27,7 @@
           - break
         %tr
           %td
-            %a{ :href => "/halo4/servicerecord/#{@service_record['Gamertag']}/match/#{match['Id']}" }
+            %a{ :href => "/halo4/servicerecord/#{@service_record['Gamertag']}/match/#{match['Id']}/" }
               #{match['VariantName']}
           %td
             #{place_from_standing(match['Standing'])}
