--- a/app/assets/stylesheets/halo4.css.scss
+++ b/app/assets/stylesheets/halo4.css.scss
@@ -216,10 +216,31 @@
         color: #cecece;
       }
       .cover > .mask > .game-victor-player-model > .game-summary-gametype {
-      margin: 0 auto;
-      width: 120px;
-      height: 120px;
-    }
+        margin: 0 auto;
+        width: 120px;
+        height: 120px;
+      }
+
+      // Campaign Skulls
+      .cover > .mask > .game-victor-player-model > .game-summary-skulls {
+        margin: 0 auto;
+        margin-top: 10px;
+        width: 450px;
+        height: 120px;
+        text-align: center;
+        color: white;
+      }
+        .cover > .mask > .game-victor-player-model > .game-summary-skulls > .title {
+          text-align: center;
+          font-size: 20px;
+        }
+        .cover > .mask > .game-victor-player-model > .game-summary-skulls > .error {
+          text-align: center;
+          color: white;
+          margin-top: 20px;
+        }
+
+
       .cover > .mask > .game-victor-player-model > .game-summary-seperator {
         background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(107,107,107,0.65) 50%, rgba(0,0,0,0) 100%); /* FF3.6+ */
         background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(50%,rgba(107,107,107,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
@@ -381,47 +402,12 @@
 }
 
 .medal_stats {
-  display: none;
-}
+   display: none;
+ }
 
-.medal-stat-popbox {
+.enemy_stats {
   display: none;
-  position: absolute;
-  z-index: 99999;
-  width: 250px;
-  background-color: #131517;
-  color: #000000;
-  border: 1px solid #4D4F53;
-  margin: 0px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
-  box-shadow: 0px 0px 5px 0px rgba(164, 164, 164, 1);
 }
-  .medal-stat-popbox > .header {
-    background-color: #333;
-    color: #ffffff;
-    font-size: 14px;
-    display: block;
-    height: 25px;
-    width: 100%;
-    padding-top: 4px;
-    padding-left: 4px;
-  }
-    .medal-stat-popbox .entry > .title {
-      float: left;
-    }
-    .medal-stat-popbox .entry > .body {
-    float: right;
-  }
-  .medal-stat-popbox > .weapon-info {
-    margin: 10px 10px 10px 10px;
-    color: white;
-    font-size: 13px;
-  }
-  .medal-stat-popbox > .personal-info {
-    margin: 0 10px 10px 10px;
-    color: white;
-    font-size: 13px;
-  }
 
 /* Challenges
 --------------------------------- */
