--- a/app/views/halo4/view_match/_view_spartan_ops.html.haml
+++ b/app/views/halo4/view_match/_view_spartan_ops.html.haml
@@ -1,18 +1,20 @@
-- title " - #{@match['GameVariantName']} on #{@match['MapVariantName']} as #{@service_record['Gamertag']}"
+- chapter = get_spartan_ops_data_from_chapter_id(@match['ChapterId'])
+- title " - #{chapter['Name']} as #{@service_record['Gamertag']}"
 
 .well.span9
   %h3
-    = @match['GameVariantName']
-    on #{@match['MapVariantName']}
+    #{chapter['Title']}
+    %br/
+  %h5
+    #{chapter['Description']}
+
+  %hr/
 
   .row-fluid
-    .cover{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(@match['MapImageUrl']['BaseUrl'], @match['MapImageUrl']['AssetUrl'], 'large')}')" }
+    .cover{ :style => "background-image: url('#{X343ApiController.asset_url_generator_basic(chapter['ImageUrl']['BaseUrl'], chapter['ImageUrl']['AssetUrl'], 'large')}')" }
       .mask
         .game-victor-player-model{ :style => "background-image: url('#{X343ApiController.GetPlayerModel(@top_player['Gamertag'], 'medium')}')" }
-          - if @is_ffa
-            = render :partial => 'halo4/view_match/cover/war_games_ffa'
-          - else
-            = render :partial => 'halo4/view_match/cover/war_games_team'
+          = render :partial => 'halo4/view_match/cover/spartan_ops', :locals => { :chapter => chapter }
 
     .game-stats
       %ul.game-stat-tabs.nav.nav-tabs
@@ -25,6 +27,9 @@
         %li
           %a.switch-content-tab{:href => '#C', "data-toggle" => 'tab'}
             Medals
+        %li
+          %a.switch-content-tab{:href => '#D', "data-toggle" => 'tab'}
+            Enemies
 
       .carnage-report-header-graph
         %div{ :id => 'graph-carnage-header-kills', :style => 'margin: 0 auto; width: 900px; height: 350px;' }
@@ -43,10 +48,7 @@
             Medals
 
       .carnage-quick-view
-        - if @is_ffa
-          = render :partial => 'halo4/view_match/carnage_quick_view/carnage_war_games_quick_view_ffa', :object => @match
-        - else
-          = render :partial => 'halo4/view_match/carnage_quick_view/carnage_war_games_quick_view_team', :object => @match
+        = render :partial => 'halo4/view_match/carnage_quick_view/carnage_campaign_engine', :object => @match
 
       .tabbable
         .tab-content
@@ -56,6 +58,10 @@
             = render :partial => 'halo4/view_match/carnage_details/carnage_report', :object => @match
           .tab-pane{ :id => 'C' }
             = render :partial => 'halo4/view_match/carnage_details/medal_report', :object => @match
+          .tab-pane{ :id => 'D' }
+            = render :partial => 'halo4/view_match/carnage_details/enemy_report', :object => @match
+
+
 
 :javascript
 
@@ -66,8 +72,7 @@
 
     $('.game-stat-tabs li.active').each(function (index) {
       tab_id = $(this).find('a').text();
-    }
-                                       );
+    });
 
     if (tab_id.indexOf("Carnage") >= 0) {
       show_carnage_for_player(player_id);
@@ -81,6 +86,10 @@
       show_personal_for_player(player_id);
       return false;
     }
+    else if (tab_id.indexOf("Enemies") >= 0) {
+      show_enemys_for_player(player_id);
+      return false;
+    }
 
     return true;
   });
@@ -89,35 +98,35 @@
   Morris.Line({
     element: 'graph-carnage-header-kills',
     data: [
-      #{draw_war_games_carnage_graph('KillsOverTime')}
+      #{draw_spartan_ops_carnage_graph('KillsOverTime')}
     ],
     xkey: 't',
-    ykeys: [ #{raw create_war_games_carnage_graph_ykeys} ],
-    labels: [ #{raw create_war_games_carnage_graph_labels} ],
+    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
     hideHover: 'always',
-    #{create_war_games_carnage_graph_line_colours}
+    #{create_spartan_ops_carnage_graph_line_colours}
   });
   Morris.Line({
     element: 'graph-carnage-header-deaths',
     data: [
-      #{draw_war_games_carnage_graph('DeathsOverTime')}
+      #{draw_spartan_ops_carnage_graph('DeathsOverTime')}
     ],
     xkey: 't',
-    ykeys: [ #{raw create_war_games_carnage_graph_ykeys} ],
-    labels: [ #{raw create_war_games_carnage_graph_labels} ],
+    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
     hideHover: 'always',
-    #{create_war_games_carnage_graph_line_colours}
+    #{create_spartan_ops_carnage_graph_line_colours}
   });
   Morris.Line({
     element: 'graph-carnage-header-medals',
     data: [
-      #{draw_war_games_carnage_graph('MedalsOverTime')}
+      #{draw_spartan_ops_carnage_graph('MedalsOverTime')}
     ],
     xkey: 't',
-    ykeys: [ #{raw create_war_games_carnage_graph_ykeys} ],
-    labels: [ #{raw create_war_games_carnage_graph_labels} ],
+    ykeys: [ #{raw create_spartan_ops_carnage_graph_ykeys} ],
+    labels: [ #{raw create_spartan_ops_carnage_graph_labels} ],
     hideHover: 'always',
-    #{create_war_games_carnage_graph_line_colours}
+    #{create_spartan_ops_carnage_graph_line_colours}
   });
 
   $(document).ready(function () {
@@ -173,8 +182,7 @@
     // hide old shit
     $('.personal_stats').each(function (i, element) {
       $(element).css('display', 'none');
-    }
-                             );
+    });
 
     // show new shit
     $('#player_personal_' + player_id).css('display', 'inline');
@@ -183,8 +191,7 @@
     // hide old shit
     $('.carnage_damage_stats').each(function (i, element) {
       $(element).css('display', 'none');
-    }
-                                   );
+    });
 
     // show new shit
     $('#player_' + player_id).css('display', 'inline');
@@ -193,9 +200,17 @@
     // hide old shit
     $('.medal_stats').each(function (i, element) {
       $(element).css('display', 'none');
-    }
-                          );
+    });
 
     // show new shit
     $('#player_medals_' + player_id).css('display', 'inline');
+  }
+  function show_enemys_for_player(player_id) {
+    // hide old shit
+    $('.enemy_stats').each(function (i, element) {
+      $(element).css('display', 'none');
+    });
+
+    // show new shit
+    $('#player_enemies_' + player_id).css('display', 'inline');
   }
