Fixed division by 0 for k/d ratio calculation

--- a/app/views/halo4/view_match/carnage_details/_enemy_report.html.haml
+++ b/app/views/halo4/view_match/carnage_details/_enemy_report.html.haml
@@ -35,7 +35,7 @@
             %td
               #{enemy_stats['Deaths']}
             %td
-              #{calculate_spread(enemy_stats['Kills'], enemy_stats['Deaths'])}
+              #{ enemy_stats['Kills'] - enemy_stats['Deaths'] }
             %td
               #{enemy_stats['AverageKillDistance']}
             %td
