--- a/app/views/halo4/view_match/carnage_quick_view/_carnage_war_games_quick_view_ffa.html.haml
+++ b/app/views/halo4/view_match/carnage_quick_view/_carnage_war_games_quick_view_ffa.html.haml
@@ -10,7 +10,7 @@
       %td{ :style => 'width: 80px;'}
         Assists
       %td{ :style => 'width: 80px;'}
-        Spread
+        K/D Ratio
       %td{ :style => 'width: 80px;'}
         Penalties
       %td{ :style => 'width: 100px;'}
@@ -67,7 +67,7 @@
           #{player['Assists']}
 
         %td
-          #{(player['Kills'].to_f / player['Deaths'].to_f).to_f.round(2)}
+          #{calculate_ratio(player['Kills'], player['Deaths'])}
 
         %td
           #{(player['Betrayals'] + player['Suicides'])}
