--- a/app/views/halo4/specializations/_completed.html.haml
+++ b/app/views/halo4/specializations/_completed.html.haml
@@ -3,7 +3,7 @@
 - if completed_specializations.any?
   - # yea nigga
   %h3
-    Pending Specializations:
+    Completed Specializations:
 
   - completed_specializations.each do |specialization|
     %div{ :style => "background-position: top right; background-repeat: no-repeat; background-image: url('#{X343ApiController.asset_url_generator_basic(specialization['ImageUrl']['BaseUrl'], specialization['ImageUrl']['AssetUrl'], 'medium')}')" }
